keyfile: return 0 when the parsed double value is invalid

As specified in the g_key_file_get_double documentation.

https://bugzilla.gnome.org/show_bug.cgi?id=768504